--- a/content/LaTeX.html
+++ b/content/LaTeX.html
@@ -153,15 +153,120 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
           </div>
           
         </header>
-    <div id="tipue_search_content">強化學習 << <a href='強化學習.html'>Previous</a> <a href='類神經網路學習.html'>Next</a> >> 類神經網路學習<br /><h1>Reference</h1>
-<p><a href="./../downloads/2018_Robotic Harvesting of Fruiting Vegetables-A Simulation Approach in V-REP, ROS and MATLAB.pdf">2018_Robotic Harvesting of Fruiting Vegetables-A Simulation Approach in V-REP, ROS and MATLAB.pdf</a></p>
-<p><a href="./../downloads/2019_Hovering Control of a Quadrotor.pdf">2019_Hovering Control of a Quadrotor.pdf</a></p>
-<p><a href="./../downloads/2019_Accelerating Training of Deep Reinforcement Learning-based Autonomous Driving Agents Through Comparative Study of Agent and Environment Designs.pdf">2019_Accelerating Training of Deep Reinforcement Learning-based Autonomous Driving Agents Through Comparative Study of Agent and Environment Designs.pdf</a></p>
-<p><a href="./../downloads/2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf">2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf</a></p>
-<p><a href="./../downloads/2019_Application of deep reinforcement learning for control problems.pdf">2019_Application of deep reinforcement learning for control problems.pdf</a></p>
-<p><a href="./../downloads/2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf">2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf</a></p>
-<p><a href="./../downloads/FlashRL_A Reinforcement Learning Platform.pdf">FlashRL_A Reinforcement Learning Platform.pdf</a></p>
-<br />強化學習 << <a href='強化學習.html'>Previous</a> <a href='類神經網路學習.html'>Next</a> >> 類神經網路學習</div>
+    <div id="tipue_search_content">專題定位 << <a href='專題定位.html'>Previous</a> <a href='參考資料.html'>Next</a> >> 參考資料<br /><h1>LaTeX</h1>
+<p><a href="https://github.com/sppmg/TW_Thesis_Template/wiki/%E7%84%A1%E8%85%A6%E6%89%8B%E5%86%8A">https://github.com/sppmg/TW_Thesis_Template/wiki/無腦手冊</a></p>
+<p><a href="https://github.com/wengan-li/ncku-thesis-template-latex">https://github.com/wengan-li/ncku-thesis-template-latex</a></p>
+<p><a href="https://github.com/HW-Lee/nthu-thesis-template">https://github.com/HW-Lee/nthu-thesis-template</a> </p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">    Features &amp; Benefits
+    Templates
+    Plans &amp; Pricing
+    Help
+    Register
+    Log In
+
+NTUST Thesis template 1.7.1 (Chinese Version)
+Author
+Ding-Jie Huang, Chien-Chun Ni
+License
+Creative Commons CC BY 4.0
+Abstract
+
+This is the Chinese Version of NTUST thesis template v1.7.1, please check "NTUST Thesis template Overleaf English Version" if you need the English one.
+
+本範本是為台灣科技大學同學們所編寫的碩博士論文Latex模板， 主要由元智大學碩博士論文latex範本改編而來， 期望加快各位同學撰寫論文的速度。
+
+P.S 原始陳念波老師的元智大學論文範本為 http://exciton.eo.yzu.edu.tw/~lab/latex/latex_note.html
+
+Support 14pt font for this version
+Tags
+Find More Templates
+NTUST Thesis template 1.7.1 (Chinese Version)
+
+    © 2020 OverleafPrivacy and TermsSecurityContact UsAboutBlog
+
+    Overleaf on TwitterOverleaf on FacebookOverleaf on LinkedIn
+
+Source
+
+% this file is encoded in utf-8
+% v1.7
+
+\documentclass[12pt, a4paper]{ntust_report} 
+
+\usepackage{fontspec}   %加這個就可以設定字體 
+\usepackage{xeCJK}       %讓中英文字體分開設置 
+
+%設定主要字型，也就是英文字型
+\setmainfont[Mapping=tex-text]{Times New Roman}            
+
+%設定中文字型
+%參考 https://www.overleaf.com/learn/latex/Questions/What_OTF/TTF_fonts_are_supported_via_fontspec%3F#Chinese
+\setCJKmainfont{cwTeXKai}      
+
+\XeTeXlinebreaklocale "zh"                %這兩行一定要加，中文才能自動換行 
+\XeTeXlinebreakskip = 0pt plus 1pt       %這兩行一定要加，中文才能自動換行
+
+\input{common_env}  %基本的環境設定  無需改變  
+
+\begin{document}
+
+
+	\input{chinese_trans} %在此檔案處定義文章中的中文名詞
+
+	%----------------------------------------------------------------------------------------------------------------------------------------------------------
+	%%% 以下是載入前頁、本文、後頁
+	% 此行請勿更動
+
+	%----------------------------------------------------------------------------------------------------------------------------------------------------------
+	% front matter 前頁
+	% 包括封面、書名頁、中文摘要、英文摘要、誌謝、目錄、表目錄、圖目錄、符號說明
+	% 在撰寫各章草稿時，可以把此部份「關掉」，以節省無謂的編譯時間。
+	% 實際內容由
+	%    my_names.tex, my_cabstract.tex, my_eabstract.tex, my_ackn.tex, my_symbols.tex
+	% 決定
+	% ntust_frontpages.tex 此檔只提供整體架構的定義，不需更動
+	% 在撰寫各章草稿時，可以把此部份「關掉」，以節省無謂的編譯時間。
+	
+	\input{frontpages/ntust_frontpages.tex} 
+
+
+
+
+	%----------------------------------------------------------------------------------------------------------------------------------------------------------
+	% main body 論文主體。建議以「章」為檔案分割的依據。
+	% 以下為建議的命名分類
+	%   introduction.tex   related_work.tex  protocol.tex  evaluation.tex  conclusion.tex
+	% 做為這幾個「章」的檔案名稱，並將檔案存放於資料夾 sections/ 下
+	% 實際命名方式可以隨你意
+	% 在撰寫各章草稿時，可以把其他章節關掉 (行首加百分號)
+	%\input{example/example_body.tex}  % 所附的範例
+
+	\input{sections/introduction.tex}
+	\input{sections/relative-work.tex}
+	\input{sections/method.tex}
+	\input{sections/Design.tex}
+	\input{sections/evaluation.tex}
+	\input{sections/Conclusion.tex}
+
+	%----------------------------------------------------------------------------------------------------------------------------------------------------------
+	% back pages 後頁
+	% 包括參考文獻、附錄、自傳
+	% 實際內容由
+	%    my_bib.bib, my_appendix.tex, my_vita.tex
+	% 決定
+	% ntust_backpages.tex 此檔只提供整體架構的定義，不需更動
+	% 在撰寫各章草稿時，可以把此部份「關掉」，以節省無謂的編譯時間。
+	%\bibliographystyle{unsrt} 
+	\input{backpages/ntust_backpages.tex}
+	%\bibliographystyle{unsrt} 
+
+
+
+\end{document} 
+ 
+
+</pre>
+<p></p><br />專題定位 << <a href='專題定位.html'>Previous</a> <a href='參考資料.html'>Next</a> >> 參考資料</div>
         
     <!-- footer -->
       <div class="container">
