--- a/content/iRobot Create.html
+++ b/content/iRobot Create.html
@@ -142,7 +142,7 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='專題定位.html'>專題定位</a><li><a href='參考資料.html'>參考資料</a></li></ul><li class='has-children'><a href='動態網站.html'>動態網站</a><ul class='dropdown'><li><a href='數位簽章.html'>數位簽章</a></li></ul><li class='has-children'><a href='機電控制.html'>機電控制</a><ul class='dropdown'><li><a href='iRobot Create.html'>iRobot Create</a></li></ul><li class='has-children'><a href='深度學習.html'>深度學習</a><ul class='dropdown'><li><a href='電腦.html'>電腦</a><li><a href='Flask.html'>Flask</a></li></ul><li class='has-children'><a href='強化學習.html'>強化學習</a><ul class='dropdown'><li><a href='Reference.html'>Reference</a></li></ul><li><a href='Flutter.html'>Flutter</a><li><a href='CMSiMDE.html'>CMSiMDE</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='專題定位.html'>專題定位</a><li><a href='LaTeX.html'>LaTeX</a><li><a href='參考資料.html'>參考資料</a><li><a href='研究生考試.html'>研究生考試</a></li></ul><li class='has-children'><a href='動態網站.html'>動態網站</a><ul class='dropdown'><li><a href='數位簽章.html'>數位簽章</a></li></ul><li class='has-children'><a href='機電控制.html'>機電控制</a><ul class='dropdown'><li><a href='iRobot Create.html'>iRobot Create</a></li></ul><li class='has-children'><a href='深度學習.html'>深度學習</a><ul class='dropdown'><li><a href='電腦.html'>電腦</a><li><a href='Flask.html'>Flask</a></li></ul><li class='has-children'><a href='強化學習.html'>強化學習</a><ul class='dropdown'><li><a href='Reference.html'>Reference</a></li></ul><li class='has-children'><a href='類神經網路學習.html'>類神經網路學習</a><ul class='dropdown'><li><a href='neural_network_in_python.pdf.html'>neural_network_in_python.pdf</a></li></ul><li><a href='Flutter.html'>Flutter</a><li><a href='CMSiMDE.html'>CMSiMDE</a></li>
                       </ul>
                 </nav>
               </div>
@@ -163,7 +163,8 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
 <p><a href="./../downloads/CommandModuleManual_v2.pdf">iRobot Create Command Module manual v2.pdf</a></p>
 <p><a href="./../downloads/CreateOpenInterface_v2.pdf">iRobot Create Open Interface v2.pdf</a></p>
 <p><a href="./../downloads/AD41700_Arduino_iRobot_workshop.pdf">Use Arduino to control iRobot Create.pdf</a></p>
-<p><a href="./../downloads/AD61600_Arduino_iRobot.pdf">Use Arduino to control iRobot Create_2.pdf</a></p><br />機電控制 << <a href='機電控制.html'>Previous</a> <a href='深度學習.html'>Next</a> >> 深度學習</div>
+<p><a href="./../downloads/AD61600_Arduino_iRobot.pdf">Use Arduino to control iRobot Create_2.pdf</a></p>
+<br />機電控制 << <a href='機電控制.html'>Previous</a> <a href='深度學習.html'>Next</a> >> 深度學習</div>
         
     <!-- footer -->
       <div class="container">
