--- a/content/研究生考試.html
+++ b/content/研究生考試.html
@@ -153,15 +153,8 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
           </div>
           
         </header>
-    <div id="tipue_search_content">強化學習 << <a href='強化學習.html'>Previous</a> <a href='類神經網路學習.html'>Next</a> >> 類神經網路學習<br /><h1>Reference</h1>
-<p><a href="./../downloads/2018_Robotic Harvesting of Fruiting Vegetables-A Simulation Approach in V-REP, ROS and MATLAB.pdf">2018_Robotic Harvesting of Fruiting Vegetables-A Simulation Approach in V-REP, ROS and MATLAB.pdf</a></p>
-<p><a href="./../downloads/2019_Hovering Control of a Quadrotor.pdf">2019_Hovering Control of a Quadrotor.pdf</a></p>
-<p><a href="./../downloads/2019_Accelerating Training of Deep Reinforcement Learning-based Autonomous Driving Agents Through Comparative Study of Agent and Environment Designs.pdf">2019_Accelerating Training of Deep Reinforcement Learning-based Autonomous Driving Agents Through Comparative Study of Agent and Environment Designs.pdf</a></p>
-<p><a href="./../downloads/2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf">2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf</a></p>
-<p><a href="./../downloads/2019_Application of deep reinforcement learning for control problems.pdf">2019_Application of deep reinforcement learning for control problems.pdf</a></p>
-<p><a href="./../downloads/2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf">2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf</a></p>
-<p><a href="./../downloads/FlashRL_A Reinforcement Learning Platform.pdf">FlashRL_A Reinforcement Learning Platform.pdf</a></p>
-<br />強化學習 << <a href='強化學習.html'>Previous</a> <a href='類神經網路學習.html'>Next</a> >> 類神經網路學習</div>
+    <div id="tipue_search_content">參考資料 << <a href='參考資料.html'>Previous</a> <a href='動態網站.html'>Next</a> >> 動態網站<br /><h1>研究生考試</h1>
+<p>csme 研究生考試科目與題型: <a href="http://csme.org.tw/Certification/College.aspx?AwardID=62">考試內容</a>及<a href="http://csme.org.tw/Certification/Prepare.aspx?NewsType=2">考古題</a></p><br />參考資料 << <a href='參考資料.html'>Previous</a> <a href='動態網站.html'>Next</a> >> 動態網站</div>
         
     <!-- footer -->
       <div class="container">
