--- a/content/類神經網路學習.html
+++ b/content/類神經網路學習.html
@@ -153,15 +153,9 @@ if ((location.href.search(/http:/) != -1) && (location.href.search(/login/) != -
           </div>
           
         </header>
-    <div id="tipue_search_content">強化學習 << <a href='強化學習.html'>Previous</a> <a href='類神經網路學習.html'>Next</a> >> 類神經網路學習<br /><h1>Reference</h1>
-<p><a href="./../downloads/2018_Robotic Harvesting of Fruiting Vegetables-A Simulation Approach in V-REP, ROS and MATLAB.pdf">2018_Robotic Harvesting of Fruiting Vegetables-A Simulation Approach in V-REP, ROS and MATLAB.pdf</a></p>
-<p><a href="./../downloads/2019_Hovering Control of a Quadrotor.pdf">2019_Hovering Control of a Quadrotor.pdf</a></p>
-<p><a href="./../downloads/2019_Accelerating Training of Deep Reinforcement Learning-based Autonomous Driving Agents Through Comparative Study of Agent and Environment Designs.pdf">2019_Accelerating Training of Deep Reinforcement Learning-based Autonomous Driving Agents Through Comparative Study of Agent and Environment Designs.pdf</a></p>
-<p><a href="./../downloads/2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf">2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf</a></p>
-<p><a href="./../downloads/2019_Application of deep reinforcement learning for control problems.pdf">2019_Application of deep reinforcement learning for control problems.pdf</a></p>
-<p><a href="./../downloads/2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf">2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf</a></p>
-<p><a href="./../downloads/FlashRL_A Reinforcement Learning Platform.pdf">FlashRL_A Reinforcement Learning Platform.pdf</a></p>
-<br />強化學習 << <a href='強化學習.html'>Previous</a> <a href='類神經網路學習.html'>Next</a> >> 類神經網路學習</div>
+    <div id="tipue_search_content">Reference << <a href='Reference.html'>Previous</a> <a href='neural_network_in_python.pdf.html'>Next</a> >> neural_network_in_python.pdf<br /><h1>類神經網路學習</h1>
+<p><a href="https://drive.google.com/file/d/1yc0WjEN33IKjgmZZlxO5LcT--qkDRZXu/view">nn_and_air_hockey.7z</a></p>
+<p>將 <a href="https://github.com/Purusharth07/Ping-Pong-Neural-Game-">https://github.com/Purusharth07/Ping-Pong-Neural-Game-</a>  改為 <a href="https://drive.google.com/file/d/1ZfkzhZBLRQSuKYsaKO2UPOC3ZvV9KaiC/view">tensorflow 2.0</a> 版本, 使用 Pygame 模擬.</p><br />Reference << <a href='Reference.html'>Previous</a> <a href='neural_network_in_python.pdf.html'>Next</a> >> neural_network_in_python.pdf</div>
         
     <!-- footer -->
       <div class="container">
